fixed apis without auth
